unpackaged/main/default/objects/npsp__Allocations_Settings__c/fields/npsp__Default_Allocations_Enabled__c.field-meta.xml
<CustomField>
    <fullName>npsp__Default_Allocations_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabling Default Allocations creates an Allocation object for each Opportunity. This enables reporting on allocations to a default General Accounting Unit, but uses more data storage.</description>
    <inlineHelpText>Enabling Default Allocations creates an Allocation object for each Opportunity. This enables reporting on allocations to a default General Accounting Unit, but uses more data storage.</inlineHelpText>
    <label>Default Allocations Enabled</label>
    <type>Checkbox</type>
</CustomField>