unpackaged/main/default/objects/npsp__Allocations_Settings__c/fields/npsp__Excluded_Opp_RecTypes__c.field-meta.xml
<CustomField>
    <fullName>npsp__Excluded_Opp_RecTypes__c</fullName>
    <description>Opportunity Record Types to exclude from calculations of Allocations rollups.</description>
    <inlineHelpText>Opportunity Record Types to exclude from calculations of Allocations rollups.</inlineHelpText>
    <label>Excluded Opp RecTypes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>